--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -21,7 +21,7 @@
 		              <li class="dropdown">
 		                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <img src="<%= current_user.avatar%>" class="avatar"></img> <%= current_user.display_name.titleize %><b class="caret"></b></a>
 		                <ul class="dropdown-menu">
-		                  <li><%= link_to 'My Dashboard', "" %></li>
+		                  <li><%= link_to 'My Posts', posts_path(user_id: current_user) %></li>
 		                  <li><%= link_to 'Sign out', destroy_user_session_url(), :method => :delete %></li>  
 		                  <li><%#= link_to "Profile", edit_user_registration_path(current_user) %></li>
 		                </ul>
@@ -33,11 +33,9 @@
 		        <%# if current_user && current_user.admin? %>
 		        <% if current_user %>
 		        <div class="nav pull-right">
-		        	<!-- 
-		        	<%= form_tag "", :id=> "search-form", :class => "navbar-search pull-right", :method => :get do %>
+		        	<%= form_tag posts_path, :id=> "search-form", :class => "navbar-search pull-right", :method => :get do %>
 		        	<%= text_field_tag :search, nil, :class => "search-query", :placeholder => "Search..." %>
 		        	<% end %>
-		        	 -->
 		        </div>
 		        <% end %>  
 	      </div><!--/.nav-collapse -->
