--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,16 +3,22 @@
       <div class="span12">
           <div class="grey-box">
         <h1>Listing contacts</h1>
-        <% if current_user.admin? %>
-          <div>
-            <h2>Import Contacts</h2>
+        <%# if current_user.admin? %>
+
+          <div class="import-area">
+            <h4>Import Contacts</h4>
             <%= form_tag import_contacts_path, multipart: true do %>
-              <%= file_field_tag :file %>
-              <%= submit_tag "Import" %>
+              <%= file_field_tag :file, :class => 'btn' %>
+              <%= submit_tag "Import" , :class => 'btn btn-primary' %>
             <% end %>
           </div>
-        <% end %>
+        <% #end %>
+        <br/>
         <div>
+          <span style="float:left">
+            <span class="badge"><%= Contact.john.size %></span>&nbsp;<%= link_to "John", contacts_path(:user_id => 4) %> |
+            <span class="badge"><%= Contact.wayne.size %></span>&nbsp;<%= link_to "Wayne", contacts_path(:user_id => 5) %> 
+          </span>
           <span style="float:right">
             Download:
             <%= link_to('<i class="icon-file"></i>CSV'.html_safe, contacts_path(format:"csv")) %> |
@@ -22,8 +28,8 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>First name</th>
               <th>Last name</th>
+              <th>First name</th>
               <th>Company</th>
               <th>Business phone</th>
               <th>Email</th>
@@ -36,8 +42,8 @@
           <tbody>
             <% @contacts.each do |contact| %>
               <tr>
-                <td><%= contact.first_name %></td>
                 <td><%= contact.last_name %></td>
+                <td><%= contact.first_name %></td>
                 <td><%= contact.company %></td>
                 <td><%= contact.business_phone %></td>
                 <td><%= contact.email %></td>
