--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -33,9 +33,16 @@
 		        <%# if current_user && current_user.admin? %>
 		        <% if current_user %>
 		        <div class="nav pull-right">
-		        	<%= form_tag posts_path, :id=> "search-form", :class => "navbar-search pull-right", :method => :get do %>
-		        	<%= text_field_tag :search, nil, :class => "search-query", :placeholder => "Search..." %>
-		        	<% end %>
+		        	<% if controller_name  == 'posts' %>
+			        	<%= form_tag posts_path, :id=> "search-form", :class => "navbar-search pull-right", :method => :get do %>
+			        	<%= text_field_tag :search, nil, :class => "search-query", :placeholder => "Search..." %>
+			        	<% end %>
+			        <% elsif controller_name  == 'contacts' %>
+			        	<%= form_tag contacts_path, :id=> "search-form", :class => "navbar-search pull-right", :method => :get do %>
+			        	<%= text_field_tag :search, nil, :class => "search-query", :placeholder => "Search..." %>
+			        	<% end %>
+			        <% else %>
+			        <% end %>
 		        </div>
 		        <% end %>  
 	      </div><!--/.nav-collapse -->
