--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,30 +1,28 @@
-<h3>Post a Comment</h3>
-<%= form_for ([@post, @comment]) do |f| %>
-  <% if @comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+<div class="row">
+  <div class="span6">
+    <div class="item-container-body">
+      <h3>Post a Comment</h3>
+      <%= form_for ([@post, @comment]) do |f| %>
+        <% if @comment.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@post.comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
 
-      <ul>
-      <% @post.comment.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+            <ul>
+            <% @post.comment.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :body , class: 'display-name' %>
+          <%= f.text_area :body %>
+        </div>
+        <div class="actions">
+          <%= f.submit class: 'btn btn-primary' %>
+        </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <!-- <div class="field">
-    <%= f.label :post %><br>
-    <%= f.text_field :post %>
-  </div> -->
-<!--   <div class="field">
-    <%= f.label :user %><br>
-    <%= f.text_field :user %>
-  </div> -->
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
