--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -10,16 +10,19 @@
 			<div class="nav-collapse collapse">
 		        
 		        <ul class="nav">
+
 		        	<% if current_user #&& current_user.admin? %>
-		        		<li><a href="<%= "#{contacts_path}" %>">Contacts</a></li>
-		        		<li><a href="<%= "#{posts_path}" %>">Posts</a></li>
+		        		<li class="<%= 'active' if controller_name == 'home' %>"><a href="<%= "#{root_path}" %>">Home</a></li>
+		        		<li class="<%= 'active' if controller_name == 'contacts' %>"><a href="<%= "#{contacts_path}" %>">Contacts</a></li>
+		        		<li class="<%= 'active' if (controller_name == 'posts' &&  params[:user_id].nil?) %>"><a href="<%= "#{posts_path}" %>">Posts</a></li>
+		        		<li class="<%= 'active' if (controller_name == 'posts' &&  params[:user_id]) %>"><%= link_to 'My Posts', posts_path(user_id: current_user) %></li>
 		        	<% end %>
 		        </ul>
 		        
 		        <ul class="nav pull-right">
 		          <% if current_user %>  
 		              <li class="dropdown">
-		                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <img src="<%= current_user.avatar%>" class="avatar"></img> <%= current_user.display_name.titleize %><b class="caret"></b></a>
+		                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="<%= current_user.avatar%>" class="avatar"></img> <%= current_user.display_name.titleize %><b class="caret"></b></a>
 		                <ul class="dropdown-menu">
 		                  <li><%= link_to 'My Posts', posts_path(user_id: current_user) %></li>
 		                  <li><%= link_to 'Sign out', destroy_user_session_url(), :method => :delete %></li>  
