Added random text on the home page using Faker gem

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,11 +17,9 @@
 					<div class='grey-box'>	
 						<h3>Welcome to DMS BCM</h3>
 						<hr />
-						<p>
-						Have too many contacts to track? DMSBCM allows you to combine
-						your business contacts, and conversations into a single - easy to
-						navigate interface. Check it out!
-						</p>
+						<% 3.times do %>
+						<p><%= Faker::Lorem.paragraphs(2) %></p>
+						<% end %>
 					</div>
 					<!-- </div> -->
 			          	
