--- a/app/views/contacts/_data.html.erb
+++ b/app/views/contacts/_data.html.erb
@@ -12,7 +12,11 @@
 					Mobile: <%= contact.mobile_phone %><br/>
 					Email: <a href="mailto:<%= contact.email %>"><%= contact.email %></a><br/>
 					Company: <%= contact.company %>
+
 				</span>
+				<div>
+					[Posts]
+				</div>
 <!-- 				<div class=" item-footer">
 					<span class="raphael-icon post-logo">Posted</span>
 					<span class="item-time">
