--- a/app/views/contacts/index.js.erb
+++ b/app/views/contacts/index.js.erb
@@ -1,4 +1,8 @@
+<% if (params[:view].nil? || params[:view] == "grid")%>
 $('#contact_list').append('<%= j render :partial => "datalist" %>');
+<% else %>
+$('#contact_list').append('<%= j render :partial => "tabledata" %>');
+<% end %>
 $('.pagination').replaceWith('<%= j paginate(@contacts) %>');
 if ($('.pagination .next').length ==0)
 	$('.pagination').hide()
