--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= simple_form_for(@post) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -16,17 +16,40 @@
     <%= f.text_field :user %>
   </div> -->
   <div class="field">
-    <%= f.label :contact_id %><br>
+    <%= f.label :contact_id %>
     <%= f.select(:contact_id, Contact.order(:last_name).map{|c| ["#{c.last_name}, #{c.first_name} - #{c.company}", c.id]}, include_blank: 'Select a Contact', style: "width:200px")%>
   </div>
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body, cols: 40, rows: 10 %>
+    <%= f.label :contact_type_id %>
+    <%= f.select(:contact_type_id, ContactType.all.map{|t| [ t.name,t.id]}, include_blank: "Select a contact type")%>
   </div>
+  <div class="field">
+    <%= f.label :contact_date %>
+    <%#= f.text_field :contact_date, :readonly => true, value: Date.today %>
+    <div class="input-append date" id="dp3" data-date-format="dd-mm-yyyy">
+      <%= f.text_field :contact_date, :readonly => true %><span class="add-on"><i class="icon-th"></i></span>
+      </div>
+  </div>
+
+  <div class="field">
+    <%= f.label :body %>
+    <%= f.text_area :body, :id=>"message_area"%>
+  </div>
+  <div class="field">
+    <%= f.label :action_item %>
+    <%= f.text_area :action_item,:id=>"message_area"%>
+  </div>
+  <div class="field">
+    <%#= f.input :complete, label: "Action Complete?", :collection => [[ 'Yes', true ], [ 'No', false ]], as: :radio_buttons %>
+    <%= f.label :action_item_complete? %>
+    <%= f.radio_button :complete, "true" %> Yes
+    <%= f.radio_button :complete, "false" %> No
+  </div>
+<br/>
   <div class="actions">
     <%= f.submit %>
   </div>
