Modified grid view and list css on contact, post models

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap
+ *= require bootstrap-responsive
  *= require bootstrap-datepicker
  *= require_self
  *= require_tree .
@@ -42,8 +43,10 @@ body {
 
 .grey-box {
   background: rgba(245, 245, 245, .93);
+  border-radius: 4px 4px 4px 4px;
   color: black;
-  padding: 20px;
+  /*padding: 20px;*/
+  padding: 10px 15px 5px;
 }
 
 .grey-box label{
@@ -156,7 +159,7 @@ body {
     min-height: 140px;
     height: 165px;
     padding: 10px 15px 5px;
-    width: 250px;
+    width: 330px;
 }
 
 .item-container-body {
@@ -168,7 +171,7 @@ body {
     margin-bottom: 20px;
     min-height: 140px;
     padding: 10px 15px 5px;
-    width: 570px;
+    /*width: 610px;*/
 }
 
 .item-header-user {
