--- a/app/views/contacts/_datalist.html.erb
+++ b/app/views/contacts/_datalist.html.erb
@@ -1,5 +1,5 @@
 <% @contacts.each do |contact| %>
-	<div style="float:left;width=300px;">
+	<div style="float:left;">
 		<div class="row">
 			<div class="span4">
 				<div class="item-container-small-body">
