--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -53,7 +53,7 @@
             <%= render :partial => 'datalist' %>
           </div>
         <% elsif params[:view]== "list" %>
-          <table class="table table-striped datalist" id="contact_list">
+          <table class="table table-bordered" id="contact_list">
             <thead>
               <tr>
                 <th>Name</th>
