--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,7 +41,7 @@
 				</div>
 
 				<div class="span4">
-					<div class='grey-box text-item-body'>	
+					<div class='item-container-body text-item-body'>	
 						<h3><%= @post.contact.last_name%>, <%= @post.contact.first_name%></h3>
 						<hr />
 						<p>Phone: <%= @post.contact.business_phone %></p>
