--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span6">
+  <div class="span8">
     <div class="item-container-body">
       <h3>Post a Comment</h3>
       <%= form_for ([@post, @comment]) do |f| %>
@@ -16,8 +16,8 @@
         <% end %>
 
         <div class="field">
-          <%= f.label :body , class: 'display-name' %>
-          <%= f.text_area :body %>
+          <%= f.label :body %>
+          <%= f.text_area :body ,:id=>"message_area"%>
         </div>
         <div class="actions">
           <%= f.submit class: 'btn btn-primary' %>
