--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,7 @@
 							<strong>Contact:</strong> <%= @post.contact.last_name %>, <%= @post.contact.first_name %><br/>
 							<strong>Contact date:</strong> <%= @post.contact_date.strftime("%m-%d-%Y") %><br/>
 							<strong>Contact type:</strong> <%= @post.contact_type.name %><br/>
-							<strong>Title:</strong> <%= @post.title %><br/>
+							<strong>Subject:</strong> <%= @post.title %><br/>
 							<strong>Phone:</strong> <%= @post.contact.business_phone %><br/>
 							<strong>Body:</strong> <%= @post.body %><br/>
 							<strong>Action items:</strong> <%= @post.action_item %><br/>
