--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,7 +32,7 @@
 								<td><%= !user.roles.first.blank? ? user.roles.first.name : 'no role yet' %></td>
 								<td><%= l user.created_at, format: :short %></td>
 								<td>
-									<% if current_user.id == user.id || current_user.admin? %>	
+									<% if current_user.admin? %>	
 									<a data-toggle="modal" href="#role-options-<%= user.id %>" class="btn btn-mini" type="button">Change role</a>
 									<%= render :partial => 'role', locals: {user: user} %>
 									<% end %>
