--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,9 @@
     <div class="span12">
       <div class="grey-box">
         <div class="page-header">
-            
-          <h1>Listing posts</h1>
-
+          <h1 class="page-header-text">Posts</h1>
+          <%= add_new_btn(new_post_path) %>
+        </div>
           <table class="table table-striped">
             <thead>
               <tr>
