--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,16 +1,17 @@
 <div class="root">
   <div class="row">
       <div class="span12">
-          <div class="grey-box">
-        <h1>Listing contacts</h1>
-          <div class="import-area">
-            <h4>Import Contacts</h4>
-            <%= form_tag import_contacts_path, multipart: true do %>
-              <%= file_field_tag :file, :class => 'btn' %>
-              <%= submit_tag "Import" , :class => 'btn btn-primary' %>
-            <% end %>
+        <div class="grey-box">
+          <div class="page-header">
+            <h1 class="page-header-text">Contacts</h1><%= add_new_btn(new_contact_path) %>
           </div>
-        <br/>
+            <div class="import-area">
+              <h4>Import Contacts</h4>
+              <%= form_tag import_contacts_path, multipart: true do %>
+                <%= file_field_tag :file, :class => 'btn' %>
+                <%= submit_tag "Import" , :class => 'btn btn-primary' %>
+              <% end %>
+            </div>
         <div>
           <span style="float:left">
             <%= link_to contacts_path(:user_id => 4,search: params[:search]), class: 'btn btn-primary btn-sm' do %>
