--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,8 +6,8 @@
 
 				<%= render 'form' %>
 
-				<%= link_to 'Show', @post %> |
-				<%= link_to 'Back', posts_path %>
+				<%= link_to 'Show', @post ,class: 'btn btn-primary'%> |
+				<%= link_to 'Back', posts_path,class: 'btn btn-primary' %>
 			</div>
 	 	</div>
 	</div>
