--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, html:{class: 'form-horizontal'}) do |f| %>
+<%= simple_form_for(@user) do |f| %>
 	
 	<% if @user.errors.any? %>
 		<div id="error_explanation">
@@ -11,16 +11,16 @@
 		</div>
 	<% end %>
 
-	<div><%= f.label :display_name %><br />
+	<div><%= f.label :display_name %>
 	<%= f.text_field :display_name, :autofocus => true %></div>
 
-	<div><%= f.label :email %><br />
+	<div><%= f.label :email %>
 	<%= f.email_field :email %></div>
 
-	<div><%= f.label :password %><br />
+	<div><%= f.label :password %>
 	<%= f.password_field :password %></div>
 
-	<div><%= f.label :password_confirmation %><br />
+	<div><%= f.label :password_confirmation %>
 	<%= f.password_field :password_confirmation %></div>
 
 	<div class="form-actions">
