--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,8 @@
 		<div class="span12">
 			<div class="grey-box">
 				<div class="page-header">
-					<h1>Users</h1>
-					<% if current_user.admin? %><%= add_new_btn(new_user_path) %><% end %>
+					 <h1 class="page-header-text">Users</h1>
+          			<% if current_user.admin? %><%= add_new_btn(new_user_path) %><% end %>
 				</div>
 				
 				<% if @users.any? %>
