--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,17 +11,16 @@
 		</div>
 	<% end %>
 
-	<div><%= f.label :display_name %>
-	<%= f.text_field :display_name, :autofocus => true %></div>
+	<%= f.input :display_name, :autofocus => true %>
 
-	<div><%= f.label :email %>
-	<%= f.email_field :email %></div>
+	<%= f.label :email %>
+	<%= f.email_field :email %>
 
-	<div><%= f.label :password %>
-	<%= f.password_field :password %></div>
+	<%= f.label :password %>
+	<%= f.password_field :password %>
 
-	<div><%= f.label :password_confirmation %>
-	<%= f.password_field :password_confirmation %></div>
+	<%= f.label :password_confirmation %>
+	<%= f.password_field :password_confirmation %>
 
 	<div class="form-actions">
 		<%= f.submit class: 'btn btn-primary' %>
